--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,40 @@
-<head>
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+{% extends "layout.html" %}
 
-<body>
-    <div class="App">
-        <header class="App-header">
-            <img src="{{ url_for('static', filename='Octocat.png') }}" class="App-logo" alt="logo" />
-            <p>
-                GitHub Codespaces <span class="heart">♥️</span> Flask
-            </p>
-            <p class="small">
-                Edit <code>templates/index.html</code> and refresh to see your changes!
-            </p>
-        </header>
+{% block title %}
+    INVOLVE
+{% endblock %}
+
+{% block main %}
+<body style="background-color: #1E2328;">
+    <div style="color: #ffff">
+        <h1 style="margin-bottom: 20px">WELCOME TO INVOLVE</h1>
+        <p class="h3">FIND SPORTS BUDDIES! </p>
+        <p class="h3">BASKETBALL, FOOTBALL, TENNIS, AND MORE</p>
+        <p class="h3">CREATE YOU'R OWN OR JOIN GROUPS</p>
+        <p class="h3">CREATE GAME SCHEDUALE</p>
+        <p class="h3" style="margin-bottom: 30px">GET ACTIVE!</p>
     </div>
+    <div class="row">
+        <div class="column">
+          <img src="/static/images/image1.jpg" style="width:100%; margin-right: -40px">
+        </div>
+        <div class="column">
+          <img src="/static/images/image2.jpg" style="width:60%">
+        </div>
+        <div class="column">
+          <img src="/static/images/image3.jpg" style="width:135%; margin-left: -20px">
+        </div>
+      </div>
 </body>
 
-</html>
+<div id="navbar" class="navbar navbar-expand-lg navbar-light bg-#1E90FF" style="left: 0;">
+  <a href="/register"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
+    <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5zm.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1h-4zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1h-2z"/>
+  </svg>
+</i> Register</a>
+  <a href="/login">Log in<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-check-fill" viewBox="0 0 16 16">
+    <path fill-rule="evenodd" d="M15.854 5.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L12.5 7.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+    <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+  </svg></a>
+</div>
+{% endblock %}
