modified:   app.py 	modified:   database.db 	modified:   flask_session/2029240f6d1128be89ddc32729463129 	modified:   helpers.py 	renamed:    static/main.css -> static/css/main.css     renamed:    static/styles.css -> static/css/styles.css 	modified:   templates/chat.html 	modified:   templates/layout_user.html 	modified:   templates/user_interface.html

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -10,13 +10,13 @@
 {% for row in messages %}
 {% if row['user_id'] == user %}
   <div class="container">
-    <img src="{{ row['img ']}}" alt="Avatar">
+    <img src="{{ row['img']}}" alt="Avatar">
     <p>{{ row['message'] }}</p>
     <span class="time-right">{{ row['datetime']}}</span>
   </div>
 {% else %}
   <div class="container">
-    <img src="{{ row['img ']}}" alt="Avatar" class="right">
+    <img src="{{ row['img']}}" alt="Avatar" class="rounded-square">
     <p>{{ row['message'] }}</p>
     <span class="time-right">{{ row['datetime']}}</span>
   </div>
