--- a/templates/user_interface.html
+++ b/templates/user_interface.html
@@ -5,8 +5,9 @@
 {% endblock %}
 
 {% block main %}
-<h1>Welcome {{ name }}</h1>
+<h1>Welcome</h1>
 <img src="{{ img }}" class="rounded-square">
+
 <button type="button" class="block" onclick="window.location.href='./create_group'" style="font-weight: bold;">CREATE LOBBY</button>
 <button type="button" class="block" onclick="window.location.href='./lo_lobbies'" style="font-weight: bold;">JOIN LOBBY</button>
 
