--- a/templates/layout_user.html
+++ b/templates/layout_user.html
@@ -22,6 +22,9 @@
             <img src="/static/images/logo.png" style="max-width: 100%; height: 75px; padding: 10px 10px;">
           </a>
         </div>
+        <div style="background-color: #1E90FF; text-align: right;">
+          <p style="margin-right: 10px;">{{ name }}</p>
+        </div>
 
         <main class=" text-center" >
             {% block main %}{% endblock %}
